--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,10 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
+markdown: kramdown
+kramdown: 
+  parse_block_html: true
+  
 # Build settings
 # theme: minima
 plugins:
